--- a/sbndqm/dqmAnalysis/example/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/example/CMakeLists.txt
@@ -2,7 +2,7 @@ simple_plugin( ExampleTimeStream "module"
   art_Framework_Services_Registry
 #  art_Framework_Services_Optional
   ${ROOT_BASIC_LIB_LIST}
-  artdaq-utilities_Plugins
+  artdaq_utilities::artdaq-utilities_Plugins
   sbndaq_online_storage
 )
 
