--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,41 +14,46 @@
 
 
 # use cmake 2.8 or later
-cmake_minimum_required (VERSION 3.14)
+cmake_minimum_required(VERSION 3.19 FATAL_ERROR)
 
-project(sbndqm)
+project(sbndqm VERSION 1.00.00 LANGUAGES CXX)
 
+message(STATUS "\n\n  ==========================   ${PROJECT_NAME}   ==========================")
 
+# cetbuildtools contains our cmake modules
 find_package(cetbuildtools REQUIRED)
-list(APPEND CMAKE_MODULE_PATH $ENV{ART_DIR}/Modules)
+
+list(APPEND CMAKE_MODULE_PATH $ENV{CANVAS_ROOT_IO_DIR}/Modules $ENV{ART_DIR}/Modules )
 
 include(CetCMakeEnv)
 cet_cmake_env()
 
+
 cet_set_compiler_flags(DIAGS CAUTIOUS
   WERROR
   NO_UNDEFINED
-#  EXTRA_FLAGS -pedantic
-  EXTRA_CXX_FLAGS -std=c++17 )
+  ALLOW_DEPRECATIONS
+  EXTRA_FLAGS -std=c++17 )
 
 cet_report_compiler_flags()
 
 # these are minimum required versions, not the actual product versions
-find_ups_product( larsoft v1_00_00 )
-find_ups_product( nutools v1_00_00 )
-find_ups_product( art v3_02_05 )
-find_ups_product( art_root_io v1_00_05 )
-find_ups_product( cetbuildtools v7_13_02 )
-find_ups_product( sbndaq_artdaq_core v0_03_00 )
-find_ups_product( artdaq_utilities v1_05_02 )
-find_ups_product( jsoncpp v1_00_00 )
-find_ups_product( artdaq_core v3_05_07 )
+find_ups_product( larsoft )
+find_ups_product( lardataobj )
+find_ups_product( nutools )
+find_ups_product( art )
+find_ups_product( art_root_io )
+find_ups_product( cetbuildtools )
+find_ups_product( sbndaq_artdaq_core )
+find_ups_product( artdaq_utilities )
+find_ups_product( jsoncpp )
+find_ups_product( artdaq_core )
 find_ups_product( fftw )
-#find_ups_product( sbndaq_decode v0_03_00 )
-find_ups_product( sbndaq_online v0_03_00 )
+find_ups_product( sbndaq_online )
 find_ups_product( sbnobj )
 find_ups_product( sbncode )
-# include_directories($ENV{JSONCPP_LIB})
+find_ups_boost()
+find_ups_root()
 
 # macros for dictionary and simple_plugin
 include(ArtDictionary)
