--- a/sbndqm/dqmAnalysis/CRT/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/CRT/CMakeLists.txt
@@ -1,9 +1,9 @@
 simple_plugin( BernCRTdqm module
   art_Framework_Services_Registry
   ${ROOT_BASIC_LIB_LIST}
-  sbndaq-artdaq-core_Overlays_Common
-  artdaq-core_Data
-  artdaq-utilities_Plugins
+  sbndaq_artdaq_core::sbndaq-artdaq-core_Overlays_Common
+  artdaq_core::artdaq-core_Data
+  artdaq_utilities::artdaq-utilities_Plugins
   sbndaq_online_storage
   sbndaq_online_hiredis
   sbndqm_Decode_Mode
