Update SBND PMT DQM

--- a/sbndqm/dqmAnalysis/PMT/SBND/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/PMT/SBND/CMakeLists.txt
@@ -28,6 +28,7 @@ simple_plugin( CAENV1730StreamsSBND "module"
   sbndaq_online_hiredis
 
   sbndqm_Decode_PMT_PMTDecodeData
+  tpcAnalysis_SBN
 
   larana_OpticalDetector_OpHitFinder
 
