updates needed for new artdaq and newer sbncode

--- a/sbndqm/CMakeLists.txt
+++ b/sbndqm/CMakeLists.txt
@@ -4,8 +4,8 @@ add_subdirectory(Decode)
 add_subdirectory(dqmAnalysis)
 #add_subdirectory(TransferInput)
 
-install (DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/AliveMonitor DESTINATION ${flavorqual_dir}/tools/)
-install (DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/DAQConsumer  DESTINATION ${flavorqual_dir}/tools/)
+install (DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/AliveMonitor DESTINATION tools)
+install (DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/DAQConsumer  DESTINATION tools)
 
 install_headers()
 install_source()
