Lan: Wrote skeleton module for spec tdc dqm

--- a/sbndqm/dqmAnalysis/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/CMakeLists.txt
@@ -10,4 +10,5 @@ add_subdirectory(CRT)
 add_subdirectory(Meta)
 add_subdirectory(example)
 add_subdirectory(FragmentAna)
+add_subdirectory(SPECTDC)
 
