run OM with DAQ

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,8 @@ find_ups_product( sbndaq_online REQUIRED )
 find_ups_product( sbnobj REQUIRED )
 find_ups_product( sbnanaobj REQUIRED )
 find_ups_product( sbncode REQUIRED)
+find_ups_product( TRACE REQUIRED)
+
 find_package( ROOT REQUIRED )
 find_package( Boost COMPONENTS system filesystem REQUIRED )
 
