updates to CSV parsers, beam gate info data product

--- a/sbndqm/Decode/Trigger/CMakeLists.txt
+++ b/sbndqm/Decode/Trigger/CMakeLists.txt
@@ -1,3 +1,15 @@
+art_make_library(LIBRARY_NAME TriggerParser
+        SUBDIRS detail
+        LIBRARIES
+                messagefacility::MF_MessageLogger
+                fhiclcpp::fhiclcpp
+                cetlib_except::cetlib_except
+                cetlib::cetlib
+                ROOT::RIO
+                ROOT::Core
+                art::Framework_Services_Registry
+)
+
 simple_plugin( DaqDecoderIcarusTrigger "module"
   
   art_Utilities
@@ -17,10 +29,9 @@ simple_plugin( DaqDecoderIcarusTrigger "module"
   ${ROOT_BASIC_LIB_LIST}
 
   cetlib cetlib_except
+  TriggerParser
 )
 
 install_headers()
 install_fhicl()
 install_source()
-
-add_subdirectory(detail)
