--- a/sbndqm/dqmAnalysis/TPC/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/TPC/CMakeLists.txt
@@ -116,6 +116,29 @@ cet_build_plugin( OnlineAnalysis art::module
   artdaq_utilities::artdaq-utilities_Plugins
 )
 
+cet_build_plugin( OnlineEvd art::module
+  sbndaq_online_storage
+  sbndaq_online_redis_connection
+  sbndaq_online_hiredis
+  tpcAnalysis_SBN
+  ${LARDATAOBJ}
+  lardataobj_RawData
+  ${ART_UTILITIES}
+  ${FHICLCPP}
+  ${ART_FRAMEWORK_CORE}
+  ${ROOT_BASIC_LIB_LIST}
+                        ${ART_FRAMEWORK_CORE}
+                        ${ART_FRAMEWORK_PRINCIPAL}
+                        ${ART_FRAMEWORK_SERVICES_REGISTRY}
+                        ${ART_FRAMEWORK_SERVICES_BASIC}
+                        art_root_io::tfile_support
+                        art_root_io::TFileService_service
+                        art_root_io::art_root_io
+                        art_Persistency_Common
+                ${ART_FRAMEWORK_IO_SOURCES}
+  artdaq_utilities::artdaq-utilities_Plugins
+)
+
 cet_build_plugin( TPCPurityDQMSender art::module
   sbndaq_online_storage
   sbndaq_online_redis_connection
