--- a/sbndqm/dqmAnalysis/PMT/SBND/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/PMT/SBND/CMakeLists.txt
@@ -1,10 +1,12 @@
-simple_plugin( CAENV1730StreamsSBND "module"
 
+
+cet_build_plugin( CAENV1730StreamsSBND art::module
+  LIBRARIES
   lardataobj::RawData
   larana::OpticalDetector_OpHitFinder
-  sbndaq_online_storage
-  sbndaq_online_redis_connection
-  sbndaq_online_hiredis
+  sbndaq_online::storage
+  sbndaq_online::redis_connection
+  sbndaq_online::hiredis
   sbndqm::Decode_PMT_PMTDecodeData
   tpcAnalysis_SBN
 
