--- a/sbndqm/dqmAnalysis/TPC/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/TPC/CMakeLists.txt
@@ -1,5 +1,4 @@
-include_directories(${FFTW_INCLUDE_DIR})
-#cet_find_library(FFTW_LIBRARY NAMES fftw3 fftw3-3 PATHS ENV FFTW_LIBRARY )
+include_directories( ${FFTW_INCLUDE_DIR} )
 
 # filter modules for running online monitoring
 add_subdirectory(OnlineFilters)
@@ -16,149 +15,138 @@ cet_make_library( LIBRARY_NAME tpcAnalysis_SBN
 		PeakFinder.cc
 		ChannelData.cc
 	LIBRARIES
-	        sbndqm_Decode_Mode
-		${LARDATAOBJ} 
-		lardataobj_RawData
-		lardata_Utilities
-                        ${ART_FRAMEWORK_PRINCIPAL}
-                        ${ART_FRAMEWORK_SERVICES_REGISTRY}
-                        ${ART_FRAMEWORK_SERVICES_BASIC}
-			art_root_io::tfile_support
-			art_root_io::TFileService_service
-			art_root_io::art_root_io
-                        art_Persistency_Common
-			art_Persistency_Provenance
-        	${ART_FRAMEWORK_IO_SOURCES}
-       		canvas
-		art_Framework_Services_FileServiceInterfaces
-		${ART_UTILITIES}
-		${FHICLCPP}
-		${ROOT_BASIC_LIB_LIST} 
-		FFTW_LIBRARY
-                           larcore_Geometry_Geometry_service
-                           larcorealg_Geometry
-                           lardataobj_Simulation
-                           lardata_Utilities
-                           lardataobj_RawData
-                           lardata_DetectorInfoServices_DetectorClocksServiceStandard_service
-                           ${ART_FRAMEWORK_CORE}
-                           ${ART_FRAMEWORK_SERVICES_OPTIONAL_RANDOMNUMBERGENERATOR_SERVICE}
-                           canvas
-                           ${MF_MESSAGELOGGER}
-                           ${MF_UTILITIES}
-                           ${FHICLCPP}
-                           cetlib cetlib_except
-                           ${CLHEP}
-                           ${ROOT_BASIC_LIB_LIST}
-			${Boost_SYSTEM_LIBRARY}
+		sbndaq_artdaq_core::sbndaq-artdaq-core_Overlays_SBND_NevisTPC
+	        sbndqm::Decode_Mode
+		lardata::Utilities
+		lardataobj::RawData
+		lardataobj::RecoBase
+		art::Framework_Principal
+		art::Framework_Services_Registry
+		art_root_io::tfile_support
+		art_root_io::TFileService_service
+		art_root_io::art_root_io
+                art::Persistency_Common
+		art::Persistency_Provenance
+        	art::Framework_IO_Sources
+       		canvas::canvas
+		art::Framework_Services_FileServiceInterfaces
+		art::Utilities
+		fhiclcpp::fhiclcpp
+		ROOT::Core
+		FFTW3::FFTW3
+                larcore::Geometry_Geometry_service
+                larcorealg::Geometry
+                lardataobj::Simulation
+                lardata::DetectorInfoServices_DetectorClocksServiceStandard_service
+		art::Framework_Core
+		art::Framework_Services_Optional_RandomNumberGenerator_service
+		messagefacility::MF_MessageLogger
+		messagefacility::headers
+                cetlib::cetlib
+		cetlib_except::cetlib_except
+		CLHEP::Random
+		ROOT::Geom
+		ROOT::XMLIO
+		ROOT::Gdml
+		Boost::system
 )
 
 cet_build_plugin( OfflineAnalysis art::module
+  LIBRARIES
   tpcAnalysis_SBN
-  ${LARDATAOBJ}
-  lardataobj_RawData
-  ${ART_UTILITIES}
-  ${FHICLCPP}
-  ${ART_FRAMEWORK_CORE}
-  ${ROOT_BASIC_LIB_LIST}
-                        ${ART_FRAMEWORK_CORE}
-                        ${ART_FRAMEWORK_PRINCIPAL}
-                        ${ART_FRAMEWORK_SERVICES_REGISTRY}
-                        ${ART_FRAMEWORK_SERVICES_BASIC}
-			art_root_io::tfile_support
-			art_root_io::TFileService_service
-			art_root_io::art_root_io
-                        art_Persistency_Common
-        	${ART_FRAMEWORK_IO_SOURCES}
-		${ROOT_BASIC_LIB_LIST} 
+  lardataobj::RawData
+  art::Utilities
+  fhiclcpp::fhiclcpp
+  art::Framework_Core
+  ROOT::Core
+  art::Framework_Principal
+  art::Framework_Services_Registry
+  art_root_io::tfile_support
+  art_root_io::TFileService_service
+  art_root_io::art_root_io
+  art::Persistency_Common
+  art::Framework_IO_Sources
 )
 
 cet_build_plugin( TPCWaveformCreator art::module
-  sbndaq_online_hiredis
+  LIBRARIES
+  sbndaq_online::hiredis
   tpcAnalysis_SBN
-  ${LARDATAOBJ}
-  lardataobj_RawData
-  ${ART_UTILITIES}
-  ${FHICLCPP}
-  ${ART_FRAMEWORK_CORE}
-  ${ROOT_BASIC_LIB_LIST}
-                        ${ART_FRAMEWORK_CORE}
-                        ${ART_FRAMEWORK_PRINCIPAL}
-                        ${ART_FRAMEWORK_SERVICES_REGISTRY}
-                        ${ART_FRAMEWORK_SERVICES_BASIC}
-			art_root_io::tfile_support
-			art_root_io::TFileService_service
-			art_root_io::art_root_io
-                        art_Persistency_Common
-        	${ART_FRAMEWORK_IO_SOURCES}
+  lardataobj::RawData
+  art::Utilities
+  fhiclcpp::fhiclcpp
+  art::Framework_Core
+  ROOT::Core
+  art::Framework_Principal
+  art::Framework_Services_Registry
+  art_root_io::tfile_support
+  art_root_io::TFileService_service
+  art_root_io::art_root_io
+  art::Persistency_Common
+  art::Framework_IO_Sources
 )
 
 cet_build_plugin( OnlineAnalysis art::module
-  sbndaq_online_storage
-  sbndaq_online_redis_connection
-  sbndaq_online_hiredis
+  LIBRARIES
+  sbndaq_online::storage
+  sbndaq_online::redis_connection
+  sbndaq_online::hiredis
   tpcAnalysis_SBN
-  ${LARDATAOBJ}
-  lardataobj_RawData
-  ${ART_UTILITIES}
-  ${FHICLCPP}
-  ${ART_FRAMEWORK_CORE}
-  ${ROOT_BASIC_LIB_LIST}
-                        ${ART_FRAMEWORK_CORE}
-                        ${ART_FRAMEWORK_PRINCIPAL}
-                        ${ART_FRAMEWORK_SERVICES_REGISTRY}
-                        ${ART_FRAMEWORK_SERVICES_BASIC}
-			art_root_io::tfile_support
-			art_root_io::TFileService_service
-			art_root_io::art_root_io
-                        art_Persistency_Common
-        	${ART_FRAMEWORK_IO_SOURCES}
+  lardataobj::RawData
+  art::Utilities
+  fhiclcpp::fhiclcpp
+  art::Framework_Core
+  ROOT::Core
+  art::Framework_Principal
+  art::Framework_Services_Registry
+  art_root_io::tfile_support
+  art_root_io::TFileService_service
+  art_root_io::art_root_io
+  art::Persistency_Common
+  art::Framework_IO_Sources
   artdaq_utilities::artdaq-utilities_Plugins
 )
 
 cet_build_plugin( TPCPurityDQMSender art::module
-  sbndaq_online_storage
-  sbndaq_online_redis_connection
-  sbndaq_online_hiredis
+  LIBRARIES
+  sbndaq_online::storage
+  sbndaq_online::redis_connection
+  sbndaq_online::hiredis
   tpcAnalysis_SBN
-  ${LARDATAOBJ}
-  sbnobj_Common_Analysis
-  ${ART_UTILITIES}
-  ${FHICLCPP}
-  ${ART_FRAMEWORK_CORE}
-  ${ROOT_BASIC_LIB_LIST}
-                        ${ART_FRAMEWORK_CORE}
-                        ${ART_FRAMEWORK_PRINCIPAL}
-                        ${ART_FRAMEWORK_SERVICES_REGISTRY}
-                        ${ART_FRAMEWORK_SERVICES_BASIC}#
-			art_root_io::tfile_support#
-			art_root_io::TFileService_service
-			art_root_io::art_root_io
-                        art_Persistency_Common
-        	${ART_FRAMEWORK_IO_SOURCES}
+  sbnobj::Common_Analysis
+  lardataobj::RawData
+  art::Utilities
+  fhiclcpp::fhiclcpp
+  art::Framework_Core
+  ROOT::Core
+  art::Framework_Principal
+  art::Framework_Services_Registry
+  art_root_io::tfile_support
+  art_root_io::TFileService_service
+  art_root_io::art_root_io
+  art::Persistency_Common
+  art::Framework_IO_Sources
   artdaq_utilities::artdaq-utilities_Plugins
 )
 cet_build_plugin( TPCWaveformAndFftRedis art::module
+  LIBRARIES
   tpcAnalysis_SBN
-  ${LARDATAOBJ}
-  lardataobj_RawData
-  ${ART_UTILITIES}
-  ${FHICLCPP}
-  ${ART_FRAMEWORK_CORE}
-  ${ROOT_BASIC_LIB_LIST}
-                        ${ART_FRAMEWORK_CORE}
-                        ${ART_FRAMEWORK_PRINCIPAL}
-                        ${ART_FRAMEWORK_SERVICES_REGISTRY}
-                        ${ART_FRAMEWORK_SERVICES_BASIC}
-                        art_root_io::tfile_support
-                        art_root_io::TFileService_service
-			art_root_io::art_root_io
-                        art_Persistency_Common
-                ${ART_FRAMEWORK_IO_SOURCES}
+  lardataobj::RawData
+  art::Utilities
+  fhiclcpp::fhiclcpp
+  art::Framework_Core
+  ROOT::Core
+  art::Framework_Principal
+  art::Framework_Services_Registry
+  art_root_io::tfile_support
+  art_root_io::TFileService_service
+  art_root_io::art_root_io
+  art::Persistency_Common
+  art::Framework_IO_Sources
   artdaq_utilities::artdaq-utilities_Plugins
-  sbndaq_online_storage
-  sbndaq_online_hiredis
-  sbndaq_online_redis_connection
+  sbndaq_online::storage
+  sbndaq_online::hiredis
+  sbndaq_online::redis_connection
 )
 
 install_headers()
