--- a/sbndqm/Decode/PMT/SBND/CMakeLists.txt
+++ b/sbndqm/Decode/PMT/SBND/CMakeLists.txt
@@ -1,25 +1,20 @@
-simple_plugin( DaqDecoderSBNDPMT "module"
-  
-  art_Utilities
-  canvas
-  
+cet_build_plugin( DaqDecoderSBNDPMT art::module
+  LIBRARIES
+  art::Utilities
+  canvas::canvas  
   artdaq_core::artdaq-core_Data  
   artdaq_core::artdaq-core_Utilities
   sbndaq_artdaq_core::sbndaq-artdaq-core_Overlays_Common
   sbndaq_artdaq_core::sbndaq-artdaq-core_Overlays_ICARUS 
-  ${LARDATAOBJ}
-  lardataobj_RawData
-  ${ART_UTILITIES}
-  ${FHICLCPP}
-  ${MF_MESSAGELOGGER}
-  ${MF_UTILITIES}
-  ${ART_FRAMEWORK_CORE}
-  ${ROOT_BASIC_LIB_LIST}
-
-  cetlib cetlib_except
-
+  lardataobj::RawData
+  fhiclcpp::fhiclcpp
+  art::Framework_Core
+  messagefacility::MF_MessageLogger
+  messagefacility::headers
+  ROOT::Core
+  cetlib::cetlib
+  cetlib_except::cetlib_except
   sbndqm_Decode_PMT_PMTDecodeData
-
 )
 
 install_headers()
