--- a/sbndqm/dqmAnalysis/Meta/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/Meta/CMakeLists.txt
@@ -1,19 +1,18 @@
-simple_plugin( ReportMetadata module
-  sbndaq_online_storage
-  sbndaq_online_redis_connection
-  sbndaq_online_hiredis
-  ${ART_UTILITIES}
-  ${FHICLCPP}
-  ${ART_FRAMEWORK_CORE}
-  ${ROOT_BASIC_LIB_LIST}
-                        ${ART_FRAMEWORK_CORE}
-                        ${ART_FRAMEWORK_PRINCIPAL}
-                        ${ART_FRAMEWORK_SERVICES_REGISTRY}
-                        ${ART_FRAMEWORK_SERVICES_BASIC}
-			art_root_io_tfile_support
-			art_root_io_TFileService_service
-                        art_Persistency_Common
-        	${ART_FRAMEWORK_IO_SOURCES}
+cet_build_plugin( ReportMetadata art::module
+  LIBRARIES
+  sbndaq_online::storage
+  sbndaq_online::redis_connection
+  sbndaq_online::hiredis
+  art::Utilities
+  fhiclcpp::fhiclcpp
+  art::Framework_Core
+  ROOT::Core
+  art::Framework_Principal
+  art::Framework_Services_Registry
+  art_root_io::tfile_support
+  art_root_io::TFileService_service
+  art::Persistency_Common
+  art::Framework_IO_Sources
   artdaq_utilities::artdaq-utilities_Plugins
 )
 install_headers()
