adding G. Petrillo's work trigger monitor

--- a/sbndqm/dqmAnalysis/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory(Meta)
 add_subdirectory(example)
 add_subdirectory(FragmentAna)
 add_subdirectory(Timing)
+add_subdirectory(Utilities)
