--- a/sbndqm/dqmAnalysis/PMT/SBND/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/PMT/SBND/CMakeLists.txt
@@ -7,7 +7,14 @@ simple_plugin( CAENV1730StreamsSBND "module"
   sbndaq_online_hiredis
   sbndqm::Decode_PMT_PMTDecodeData
   tpcAnalysis_SBN
+  
+)
 
+simple_plugin( CAENV1730FlashMetricsSBND "module" 
+  sbndaq_artdaq_core::sbndaq-artdaq-core_Obj_SBND
+  sbndaq_online_storage
+  sbndaq_online_redis_connection
+  sbndaq_online_hiredis
 )
 
 add_subdirectory(fcl)
