sbnd release pr

--- a/sbndqm/dqmAnalysis/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/CMakeLists.txt
@@ -11,4 +11,5 @@ add_subdirectory(Meta)
 add_subdirectory(example)
 add_subdirectory(FragmentAna)
 add_subdirectory(SunsetAna)
+add_subdirectory(Timing)
 
